# python-package-demo

./: LICENSE  Makefile  README.md  pyproject.toml
src/demo_package_lavajuno/: demo.py
tests/: __init__.py  test_demo.py
