[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo_package_lavajuno"
version = "0.0.1"
authors = [
    {name="Your Name Here", email="example@email.address.invalid"},
]
description = "A short description of this package here."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE*"]

[project.urls]
Homepage = "https://github.com/lavajuno/python-package-demo/"
Issues = "https://github.com/lavajuno/python-package-demo/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/demo_package_lavajuno"]
